--- a/packages/@ionic/cli-utils/tsconfig.json
+++ b/packages/@ionic/cli-utils/tsconfig.json
@@ -30,6 +30,7 @@
     "../../../types/dargs.d.ts",
     "../../../types/elementtree.d.ts",
     "../../../types/leek.d.ts",
+    "../../../types/os-name.d.ts",
     "../../../types/proxy-middleware.d.ts",
     "../../../types/slice-ansi.d.ts",
     "../../../types/ssh-config.d.ts",
