--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -50,13 +50,13 @@
     "diff": "^3.4.0",
     "elementtree": "^0.1.7",
     "express": "^4.16.2",
+    "http-proxy-middleware": "^0.17.4",
     "inquirer": "^3.3.0",
     "leek": "0.0.24",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "opn": "^5.1.0",
     "os-name": "^2.0.1",
-    "proxy-middleware": "^0.15.0",
     "semver": "^5.4.1",
     "slice-ansi": "^1.0.0",
     "ssh-config": "^1.1.1",
@@ -81,6 +81,7 @@
     "@types/diff": "^3.2.2",
     "@types/express": "^4.0.38",
     "@types/gulp": "^3.8.33",
+    "@types/http-proxy-middleware": "^0.17.2",
     "@types/inquirer": "0.0.35",
     "@types/lodash": "^4.14.80",
     "@types/minimist": "^1.2.0",
