--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -59,8 +59,10 @@
     "os-name": "^2.0.1",
     "semver": "^5.4.1",
     "slice-ansi": "^1.0.0",
+    "split2": "^2.2.0",
     "ssh-config": "^1.1.1",
     "string-width": "^2.1.1",
+    "strip-ansi": "^4.0.0",
     "superagent": "^3.8.1",
     "tar": "^4.0.2",
     "tiny-lr": "^1.0.5",
@@ -84,6 +86,8 @@
     "@types/minimist": "^1.2.0",
     "@types/opn": "^5.1.0",
     "@types/semver": "^5.4.0",
+    "@types/split2": "^2.1.6",
+    "@types/strip-ansi": "^3.0.0",
     "@types/tar": "^4.0.0",
     "@types/uuid": "^3.4.3",
     "@types/ws": "^3.2.0",
