--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
+    "debug": "^3.1.0",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
     "strip-ansi": "^4.0.0",
@@ -42,9 +43,11 @@
     "tslib": "^1.8.0"
   },
   "devDependencies": {
+    "@types/debug": "0.0.30",
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.1",
     "@types/rimraf": "^2.0.2",
+    "@types/strip-ansi": "^3.0.0",
     "@types/superagent": "^3.5.6"
   }
 }
