--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -47,6 +47,7 @@
     "ci-info": "^1.1.2",
     "cross-spawn": "^5.1.0",
     "dargs": "^5.1.0",
+    "debug": "^3.1.0",
     "diff": "^3.4.0",
     "elementtree": "^0.1.7",
     "express": "^4.16.2",
@@ -77,6 +78,7 @@
     "@types/body-parser": "^1.16.8",
     "@types/chokidar": "^1.7.3",
     "@types/clean-css": "^3.4.30",
+    "@types/debug": "0.0.30",
     "@types/diff": "^3.2.2",
     "@types/express": "^4.0.38",
     "@types/gulp": "^3.8.35",
