--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ionic/discover",
   "version": "0.4.0",
-  "description": "Simple UDP based protocol for service discovery implemented in pure JS. Not mDNS or bonjour. ",
+  "description": "Simple UDP based protocol for service discovery implemented in pure JS.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "homepage": "https://ionicframework.com/",
@@ -13,54 +13,39 @@
     "README.md"
   ],
   "scripts": {
+    "clean": "rm -rf ./dist",
+    "lint": "tslint --config ../../../tslint.js --project tsconfig.json --type-check",
     "build": "npm run clean && tsc",
-    "clean": "rimraf ./dist",
-    "watch": "npm run clean && tsc -w",
-    "changelog": "./node_modules/.bin/conventional-changelog -p angular -i CHANGELOG.md -s",
+    "watch": "tsc -w",
     "test": "jest",
-    "deploy": "./node_modules/.bin/np",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "netmask": "^1.0.6"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.8",
-    "@types/netmask": "^1.0.30",
-    "@types/node": "^8.0.18",
-    "conventional-changelog-cli": "^1.3.2",
-    "github": "^9.2.0",
-    "ionic-cz-conventional-changelog": "^1.0.0",
-    "jest": "^20.0.4",
-    "np": "^2.16.0",
-    "rimraf": "^2.6.1",
-    "tslint": "^5.6.0",
-    "tslint-ionic-rules": "0.0.11",
-    "typescript": "^2.4.2"
+    "@types/netmask": "^1.0.30"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/ionic-discover.git"
+    "url": "https://github.com/ionic-team/ionic-cli.git"
   },
   "bugs": {
-    "url": "https://github.com/ionic-team/ionic-discover/issues"
+    "url": "https://github.com/ionic-team/ionic-cli/issues"
   },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/ionic-cz-conventional-changelog"
-    }
-  },
-  "typings": "dist/index.d.ts",
   "jest": {
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.(ts)$": "<rootDir>/preprocessor.js"
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
     },
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
-    "testRegex": "/src/.*\\.spec\\.(ts|js)$",
-    "coverageDirectory": "coverage"
+    "transform": {
+      ".(ts)": "<rootDir>/../../../node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(ts|js)$"
   }
 }
