--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -8,7 +8,7 @@
   "types": "./index.d.ts",
   "scripts": {
     "clean": "rm -rf index.* bootstrap.* definitions.* guards.* ./lib ./commands ./dist",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json --type-check",
+    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest",
