--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "clean": "rm -rf ./dist",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json --type-check",
+    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest",
