--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -49,10 +49,12 @@
     "chalk": "^2.3.0",
     "opn": "^5.1.0",
     "semver": "^5.3.0",
-    "tslib": "^1.8.0"
+    "tslib": "^1.8.0",
+    "update-notifier": "^2.3.0"
   },
   "devDependencies": {
-    "@types/opn": "^5.1.0"
+    "@types/opn": "^5.1.0",
+    "@types/update-notifier": "^1.0.2"
   },
   "jest": {
     "globals": {
