--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "chalk": "^2.3.0",
+    "dargs": "^5.1.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.4",
     "ncp": "^2.0.0",
@@ -44,6 +45,7 @@
     "tslib": "^1.8.0"
   },
   "devDependencies": {
+    "@types/dargs": "^5.1.0",
     "@types/debug": "0.0.30",
     "@types/lodash": "^4.14.88",
     "@types/minimist": "^1.2.0",
