wip: move format to cli-framework

--- a/packages/ionic/tsconfig.json
+++ b/packages/ionic/tsconfig.json
@@ -20,13 +20,12 @@
   },
   "include": [
     "../../types/cross-spawn.d.ts",
-    "../../types/dargs.d.ts",
     "../../types/elementtree.d.ts",
     "../../types/slice-ansi.d.ts",
     "../../types/string-width.d.ts",
     "../../types/ssh-config.d.ts",
     "../../types/superagent.d.ts",
-    "../../types/leek.d.ts",
+    "../../types/wrap-ansi.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
