--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -40,9 +40,12 @@
     "lodash": "^4.17.4",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
+    "slice-ansi": "^1.0.0",
+    "string-width": "^2.1.1",
     "strip-ansi": "^4.0.0",
     "superagent": "^3.8.1",
-    "tslib": "^1.8.0"
+    "tslib": "^1.8.0",
+    "wrap-ansi": "^3.0.1"
   },
   "devDependencies": {
     "@types/dargs": "^5.1.0",
