--- a/packages/@ionic/cli-framework/tsconfig.json
+++ b/packages/@ionic/cli-framework/tsconfig.json
@@ -23,7 +23,9 @@
     ]
   },
   "include": [
-    "../../types/cross-spawn.d.ts",
+    "../../../types/string-width.d.ts",
+    "../../../types/slice-ansi.d.ts",
+    "../../../types/wrap-ansi.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
