--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "@ionic/cli-framework": "0.1.2",
     "chalk": "^2.3.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "tslib": "^1.8.1"
   },
   "devDependencies": {
     "@stencil/core": "next",
