--- a/packages/@ionic/v1-util/package.json
+++ b/packages/@ionic/v1-util/package.json
@@ -32,14 +32,19 @@
     "express": "^4.16.2",
     "http-proxy-middleware": "^0.17.4",
     "tiny-lr": "^1.0.5",
+    "tslib": "^1.8.1",
     "ws": "3.3.2"
   },
   "devDependencies": {
     "@types/chokidar": "^1.7.4",
     "@types/debug": "0.0.30",
     "@types/express": "^4.0.39",
+    "@types/gulp": "^3.8.35",
     "@types/http-proxy-middleware": "^0.17.2",
     "@types/ws": "^3.2.1"
+  },
+  "optionalDependencies": {
+    "gulp": "^3.9.1"
   },
   "repository": {
     "type": "git",
