--- a/packages/@ionic/v1-util/tsconfig.json
+++ b/packages/@ionic/v1-util/tsconfig.json
@@ -4,7 +4,10 @@
     "outDir": "./dist"
   },
   "include": [
+    "../../../types/slice-ansi.d.ts",
+    "../../../types/string-width.d.ts",
     "../../../types/tiny-lr.d.ts",
+    "../../../types/wrap-ansi.d.ts",
     "src/**/*.ts"
   ],
   "exclude": [
