--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -38,6 +38,7 @@
     "dargs": "^5.1.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.4",
+    "minimist": "^1.2.0",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
     "slice-ansi": "^1.0.0",
