--- a/packages/@ionic/cli-scripts/package.json
+++ b/packages/@ionic/cli-scripts/package.json
@@ -11,18 +11,18 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "@ionic/cli-framework": "0.1.2",
+    "@ionic/cli-utils": "1.19.0",
     "ansi-styles": "^3.2.0",
     "escape-string-regexp": "^1.0.5",
+    "ionic": "3.19.0",
     "strip-ansi": "^4.0.0",
     "tslib": "^1.8.0"
   },
   "devDependencies": {
-    "@ionic/cli-framework": "0.1.2",
-    "@ionic/cli-utils": "1.19.0",
     "@types/ansi-styles": "^2.0.30",
     "@types/escape-string-regexp": "0.0.32",
-    "@types/strip-ansi": "^3.0.0",
-    "ionic": "3.19.0"
+    "@types/strip-ansi": "^3.0.0"
   },
   "jest": {
     "globals": {
