--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bootstrap": "lerna bootstrap && npm run build",
     "clean": "lerna run clean",
     "lint": "lerna run lint",
+    "lint:fix": "lerna run lint -- -- -- --fix",
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
