--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -40,18 +40,13 @@
     "@ionic/cli-framework": "0.1.2",
     "@ionic/discover": "0.4.0",
     "archiver": "^2.1.0",
-    "basic-auth": "^2.0.0",
-    "body-parser": "^1.18.1",
     "chalk": "^2.3.0",
-    "chokidar": "^1.7.0",
     "ci-info": "^1.1.2",
     "cross-spawn": "^5.1.0",
     "debug": "^3.1.0",
     "diff": "^3.4.0",
     "elementtree": "^0.1.7",
-    "express": "^4.16.2",
-    "http-proxy-middleware": "^0.17.4",
-    "inquirer": "^4.0.0",
+    "inquirer": "^4.0.1",
     "leek": "0.0.24",
     "lodash": "^4.17.4",
     "opn": "^5.1.0",
@@ -59,34 +54,26 @@
     "semver": "^5.4.1",
     "split2": "^2.2.0",
     "ssh-config": "^1.1.1",
-    "superagent": "^3.8.1",
-    "tar": "^4.0.2",
+    "superagent": "^3.8.2",
+    "tar": "^4.2.0",
     "through2": "^2.0.3",
-    "tiny-lr": "^1.0.5",
-    "tslib": "^1.8.0",
-    "uuid": "^3.0.1",
-    "ws": "^3.3.2"
+    "tslib": "^1.8.1",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "@types/archiver": "^2.0.1",
-    "@types/basic-auth": "^1.1.2",
-    "@types/body-parser": "^1.16.8",
-    "@types/chokidar": "^1.7.3",
     "@types/clean-css": "^3.4.30",
     "@types/debug": "0.0.30",
     "@types/diff": "^3.2.2",
-    "@types/express": "^4.0.38",
     "@types/http-proxy-middleware": "^0.17.2",
-    "@types/inquirer": "0.0.35",
-    "@types/lodash": "^4.14.85",
+    "@types/inquirer": "0.0.36",
+    "@types/lodash": "^4.14.91",
     "@types/opn": "^5.1.0",
     "@types/semver": "^5.4.0",
     "@types/split2": "^2.1.6",
     "@types/tar": "^4.0.0",
     "@types/through2": "^2.0.33",
-    "@types/uuid": "^3.4.3",
-    "@types/ws": "^3.2.0",
-    "rxjs": "^5.5.2"
+    "@types/uuid": "^3.4.3"
   },
   "jest": {
     "globals": {
