--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -27,7 +27,6 @@
     "watch": "npm run watch.tsc",
     "watch.stencil": "npm run clean.stencil && concurrently \"stencil build --dev --watch\" \"stencil-dev-server --address localhost --httpPort 8900 --no-open\"",
     "watch.tsc": "tsc -w",
-    "test": "jest",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -37,9 +36,9 @@
     "tslib": "^1.8.1"
   },
   "devDependencies": {
-    "@stencil/core": "next",
+    "@stencil/core": "^0.1.1-0",
     "@stencil/dev-server": "next",
-    "@types/express": "^4.0.39",
+    "@types/express": "^4.11.0",
     "concurrently": "^3.5.1"
   },
   "repository": {
