--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -47,12 +47,14 @@
     "@ionic/cli-framework": "0.1.2",
     "@ionic/cli-utils": "1.19.0",
     "chalk": "^2.3.0",
+    "lodash": "^4.17.4",
     "opn": "^5.1.0",
     "semver": "^5.3.0",
     "tslib": "^1.8.1",
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.91",
     "@types/opn": "^5.1.0",
     "@types/update-notifier": "^1.0.2"
   },
