--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch": "lerna run watch --parallel",
     "docs": "node ./packages/@ionic/cli-scripts/bin/docs",
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
+    "publish:ci-4.x": "lerna publish --yes --canary --exact --npm-tag=canary --skip-git --cd-version=major --scope=ionic --scope=@ionic/cli-utils && lerna publish --yes --canary --exact --npm-tag=canary --skip-git --cd-version=patch --scope='@ionic/+(cli-p*|cli-s*|cli-f*|lab|v1-util)'",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
     "publish": "lerna publish --exact --conventional-commits",
     "prepush": "npm run lint"
