--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "clean": "lerna run clean",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint -- -- -- --fix",
+    "link": "lerna exec --scope=ionic --scope='@ionic/+(lab|v1-util)' npm link",
+    "unlink": "lerna exec --scope=ionic --scope='@ionic/+(lab|v1-util)' npm unlink",
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
