chore(npm): include bin in packages

--- a/packages/@ionic/lab/package.json
+++ b/packages/@ionic/lab/package.json
@@ -11,6 +11,7 @@
   "author": "Ionic Team <hi@ionic.io> (https://ionic.io)",
   "license": "MIT",
   "files": [
+    "bin/",
     "dist/",
     "www/",
     "LICENSE",
