--- a/packages/@ionic/cli-utils/tsconfig.json
+++ b/packages/@ionic/cli-utils/tsconfig.json
@@ -13,6 +13,7 @@
     "../../../types/ssh-config.d.ts",
     "../../../types/string-width.d.ts",
     "../../../types/superagent.d.ts",
+    "../../../types/superagent-proxy.d.ts",
     "../../../types/tiny-lr.d.ts",
     "../../../types/wrap-ansi.d.ts",
     "src/**/*.ts"
