--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.17.4",
     "opn": "^5.1.0",
     "os-name": "^2.0.1",
+    "package-json": "^4.0.1",
     "semver": "^5.4.1",
     "split2": "^2.2.0",
     "ssh-config": "^1.1.1",
@@ -69,6 +70,7 @@
     "@types/inquirer": "0.0.36",
     "@types/lodash": "^4.14.91",
     "@types/opn": "^5.1.0",
+    "@types/package-json": "^4.0.1",
     "@types/semver": "^5.4.0",
     "@types/split2": "^2.1.6",
     "@types/tar": "^4.0.0",
