--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "lerna run test",
     "build": "lerna run build",
     "watch": "lerna run watch --parallel",
-    "docs": "node ./packages/@ionic/cli-scripts/bin/docs",
+    "docs": "node ./packages/@ionic/cli-scripts/bin/ionic-cli-scripts docs",
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:ci-4.x": "lerna publish --canary --exact --npm-tag=canary --skip-git --cd-version=major",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
