docs: update and add page for project types

--- a/packages/@ionic/cli-scripts/package.json
+++ b/packages/@ionic/cli-scripts/package.json
@@ -14,6 +14,7 @@
     "@ionic/cli-framework": "0.1.2",
     "@ionic/cli-utils": "1.19.0",
     "ansi-styles": "^3.2.0",
+    "ascii-tree": "^0.3.0",
     "escape-string-regexp": "^1.0.5",
     "ionic": "3.19.0",
     "strip-ansi": "^4.0.0",
