--- a/packages/@ionic/cli-scripts/tsconfig.json
+++ b/packages/@ionic/cli-scripts/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./dist"
   },
   "include": [
+    "../../../types/ascii-tree.d.ts",
     "../../../types/cross-spawn.d.ts",
     "../../../types/superagent.d.ts",
     "src/**/*.ts"
