--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -46,6 +46,7 @@
     "strip-ansi": "^4.0.0",
     "superagent": "^3.8.2",
     "tslib": "^1.8.1",
+    "untildify": "^3.0.2",
     "wrap-ansi": "^3.0.1"
   },
   "devDependencies": {
@@ -56,6 +57,7 @@
     "@types/ncp": "^2.0.1",
     "@types/rimraf": "^2.0.2",
     "@types/strip-ansi": "^3.0.0",
-    "@types/superagent": "^3.5.6"
+    "@types/superagent": "^3.5.6",
+    "@types/untildify": "^3.0.0"
   }
 }
