chore(deps): cleanup, update

--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -21,7 +21,8 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "netmask": "^1.0.6"
+    "netmask": "^1.0.6",
+    "tslib": "^1.9.0"
   },
   "devDependencies": {
     "@types/netmask": "^1.0.30"
