--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -47,6 +47,7 @@
     "@ionic/cli-framework": "0.1.2",
     "@ionic/cli-utils": "1.19.0",
     "chalk": "^2.3.0",
+    "debug": "^3.1.0",
     "lodash": "^4.17.4",
     "opn": "^5.2.0",
     "semver": "^5.5.0",
@@ -54,6 +55,7 @@
     "update-notifier": "^2.3.0"
   },
   "devDependencies": {
+    "@types/debug": "0.0.30",
     "@types/lodash": "^4.14.92",
     "@types/opn": "^5.1.0",
     "@types/update-notifier": "^1.0.2"
