--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -13,7 +13,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "clean": "rm -rf ./dist",
+    "clean": "rimraf ./dist",
     "lint": "tslint --config ../../tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
@@ -58,7 +58,8 @@
     "@types/debug": "0.0.30",
     "@types/lodash": "^4.14.95",
     "@types/opn": "^5.1.0",
-    "@types/update-notifier": "^2.0.0"
+    "@types/update-notifier": "^2.0.0",
+    "rimraf": "^2.6.2"
   },
   "jest": {
     "globals": {
