chore(ci): add cli-hooks to cache, lock TS 2.6

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "packages/@ionic/cli-framework/package.json" }}
       - restore_cache:
+          key: dependency-cache-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+      - restore_cache:
           key: dependency-cache-{{ checksum "packages/@ionic/cli-utils/package.json" }}
       - restore_cache:
           key: dependency-cache-{{ checksum "packages/@ionic/cli-scripts/package.json" }}
@@ -36,6 +38,10 @@ jobs:
           key: dependency-cache-{{ checksum "packages/@ionic/cli-framework/package.json" }}
           paths:
             - packages/@ionic/cli-framework/node_modules
+      - save_cache:
+          key: dependency-cache-{{ checksum "packages/@ionic/cli-hooks/package.json" }}
+          paths:
+            - packages/@ionic/cli-hooks/node_modules
       - save_cache:
           key: dependency-cache-{{ checksum "packages/@ionic/cli-utils/package.json" }}
           paths:
