--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "ts-jest": "^22.0.1",
     "tslint": "^5.9.1",
     "tslint-ionic-rules": "0.0.13",
-    "typescript": "^2.6.2"
+    "typescript": "~2.6.2"
   }
 }
