chore(ci): forgot to do the thing it told me to do
http://inikulin.github.io/parse5/#typescript-definitions

--- a/packages/@ionic/cli-hooks/tsconfig.json
+++ b/packages/@ionic/cli-hooks/tsconfig.json
@@ -1,8 +1,12 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "declaration": false,
-    "outDir": "./"
+    "outDir": "./",
+    "paths": {
+      "parse5": ["./node_modules/parse5/lib/index.d.ts"]
+    }
   },
   "include": [
     "../../../types/cross-spawn.d.ts",
