feat(process): improve upon process exit handler

--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "ncp": "^2.0.0",
+    "once": "^1.4.0",
     "rimraf": "^2.6.2",
     "slice-ansi": "^1.0.0",
     "string-width": "^2.1.1",
@@ -53,6 +54,7 @@
     "@types/lodash": "^4.14.95",
     "@types/minimist": "^1.2.0",
     "@types/ncp": "^2.0.1",
+    "@types/once": "^1.4.0",
     "@types/rimraf": "^2.0.2",
     "@types/strip-ansi": "^3.0.0",
     "@types/superagent": "^3.5.7",
