--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -61,6 +61,8 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^0.3.1",
+    "@angular-devkit/schematics": "^0.3.1",
     "@types/clean-css": "^3.4.30",
     "@types/debug": "0.0.30",
     "@types/diff": "^3.2.2",
@@ -74,9 +76,12 @@
     "@types/tar": "^4.0.0",
     "@types/through2": "^2.0.33",
     "@types/uuid": "^3.4.3",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "source-map": "^0.7.0"
   },
   "optionalDependencies": {
+    "@angular-devkit/core": "^0.3.1",
+    "@angular-devkit/schematics": "^0.3.1",
     "superagent-proxy": "^1.0.2"
   },
   "jest": {
