--- a/packages/@ionic/cli-hooks/tsconfig.json
+++ b/packages/@ionic/cli-hooks/tsconfig.json
@@ -5,7 +5,7 @@
     "declaration": false,
     "outDir": "./",
     "paths": {
-      "parse5": ["./node_modules/parse5/lib/index.d.ts"]
+      "parse5": ["../../../node_modules/parse5/lib/index.d.ts"]
     }
   },
   "include": [
