--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -12,9 +12,16 @@
     "LICENSE",
     "README.md"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ionic-team/ionic-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ionic-team/ionic-cli/issues"
+  },
   "scripts": {
-    "clean": "rimraf ./dist",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "clean": "rimraf dist",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest",
@@ -26,14 +33,13 @@
   },
   "devDependencies": {
     "@types/netmask": "^1.0.30",
-    "rimraf": "^2.6.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ionic-team/ionic-cli.git"
-  },
-  "bugs": {
-    "url": "https://github.com/ionic-team/ionic-cli/issues"
+    "@types/node": "^6.0.101",
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
   },
   "jest": {
     "globals": {
