--- a/package.json
+++ b/package.json
@@ -19,18 +19,9 @@
     "prepush": "npm run lint"
   },
   "devDependencies": {
-    "@types/node": "^6.0.96",
     "chokidar-cli": "^1.2.0",
-    "concurrently": "^3.5.1",
-    "eslint-config-ionic": "0.0.2",
     "husky": "^0.14.3",
-    "jest": "^22.1.4",
-    "jest-cli": "^22.1.4",
     "lerna": "^2.8.0",
-    "replace": "^0.3.0",
-    "ts-jest": "^22.0.1",
-    "tslint": "^5.9.1",
-    "tslint-ionic-rules": "0.0.13",
-    "typescript": "~2.6.2"
+    "tslint-ionic-rules": "latest"
   }
 }
