--- a/packages/@ionic/cli-framework/package.json
+++ b/packages/@ionic/cli-framework/package.json
@@ -10,14 +10,43 @@
     "node": ">=6.4.0"
   },
   "scripts": {
-    "clean": "rimraf index.* definitions.* guards.* ./lib ./utils",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "clean": "rimraf index.* definitions.* guards.* lib utils",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest",
     "prepublishOnly": "npm run build"
   },
   "license": "MIT",
+  "dependencies": {
+    "chalk": "^2.3.0",
+    "debug": "^3.1.0",
+    "lodash": "^4.17.5",
+    "minimist": "^1.2.0",
+    "ncp": "^2.0.0",
+    "rimraf": "^2.6.2",
+    "slice-ansi": "^1.0.0",
+    "string-width": "^2.1.1",
+    "strip-ansi": "^4.0.0",
+    "tslib": "^1.9.0",
+    "untildify": "^3.0.2",
+    "wrap-ansi": "^3.0.1"
+  },
+  "devDependencies": {
+    "@types/debug": "0.0.30",
+    "@types/lodash": "^4.14.104",
+    "@types/minimist": "^1.2.0",
+    "@types/ncp": "^2.0.1",
+    "@types/node": "^6.0.101",
+    "@types/rimraf": "^2.0.2",
+    "@types/strip-ansi": "^3.0.0",
+    "@types/untildify": "^3.0.0",
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
+  },
   "jest": {
     "globals": {
       "ts-jest": {
@@ -32,30 +61,5 @@
       ".(ts)": "<rootDir>/../../../node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
-  },
-  "dependencies": {
-    "chalk": "^2.3.0",
-    "debug": "^3.1.0",
-    "lodash": "^4.17.4",
-    "minimist": "^1.2.0",
-    "ncp": "^2.0.0",
-    "rimraf": "^2.6.2",
-    "slice-ansi": "^1.0.0",
-    "string-width": "^2.1.1",
-    "strip-ansi": "^4.0.0",
-    "superagent": "^3.8.2",
-    "tslib": "^1.9.0",
-    "untildify": "^3.0.2",
-    "wrap-ansi": "^3.0.1"
-  },
-  "devDependencies": {
-    "@types/debug": "0.0.30",
-    "@types/lodash": "^4.14.95",
-    "@types/minimist": "^1.2.0",
-    "@types/ncp": "^2.0.1",
-    "@types/rimraf": "^2.0.2",
-    "@types/strip-ansi": "^3.0.0",
-    "@types/superagent": "^3.5.7",
-    "@types/untildify": "^3.0.0"
   }
 }
