--- a/packages/@ionic/cli-plugin-proxy/package.json
+++ b/packages/@ionic/cli-plugin-proxy/package.json
@@ -7,8 +7,8 @@
   "main": "./dist/index.js",
   "types": "./dist/main.d.ts",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "clean": "rimraf dist",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "prepublishOnly": "npm run build"
@@ -37,6 +37,20 @@
   "files": [
     "dist/"
   ],
+  "dependencies": {
+    "@ionic/cli-utils": "1.19.0",
+    "superagent-proxy": "^1.0.2",
+    "tslib": "^1.9.0"
+  },
+  "devDependencies": {
+    "@types/node": "^6.0.101",
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
+  },
   "license": "MIT",
   "jest": {
     "globals": {
@@ -52,13 +66,5 @@
       ".(ts)": "<rootDir>/../../../node_modules/ts-jest/preprocessor.js"
     },
     "testRegex": "/__tests__/.*\\.(ts|js)$"
-  },
-  "dependencies": {
-    "@ionic/cli-utils": "1.19.0",
-    "superagent-proxy": "^1.0.2",
-    "tslib": "^1.9.0"
-  },
-  "devDependencies": {
-    "rimraf": "^2.6.2"
   }
 }
