--- a/packages/@ionic/cli-scripts/package.json
+++ b/packages/@ionic/cli-scripts/package.json
@@ -2,8 +2,8 @@
   "name": "@ionic/cli-scripts",
   "version": "0.3.7",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "clean": "rimraf dist",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest"
@@ -24,8 +24,14 @@
   "devDependencies": {
     "@types/ansi-styles": "^2.0.30",
     "@types/escape-string-regexp": "0.0.32",
+    "@types/node": "^6.0.101",
     "@types/strip-ansi": "^3.0.0",
-    "rimraf": "^2.6.2"
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
   },
   "jest": {
     "globals": {
