--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -7,8 +7,8 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "scripts": {
-    "clean": "rimraf index.* bootstrap.* constants.* definitions.* guards.* ./lib ./commands",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "clean": "rimraf index.* bootstrap.* constants.* definitions.* guards.* lib commands",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest",
@@ -47,7 +47,7 @@
     "elementtree": "^0.1.7",
     "inquirer": "^5.0.1",
     "leek": "0.0.24",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "opn": "^5.2.0",
     "os-name": "^2.0.1",
     "package-json": "^4.0.1",
@@ -68,7 +68,8 @@
     "@types/diff": "^3.2.2",
     "@types/http-proxy-middleware": "^0.17.2",
     "@types/inquirer": "0.0.36",
-    "@types/lodash": "^4.14.95",
+    "@types/lodash": "^4.14.104",
+    "@types/node": "^6.0.101",
     "@types/opn": "^5.1.0",
     "@types/package-json": "^4.0.1",
     "@types/semver": "^5.4.0",
@@ -76,8 +77,13 @@
     "@types/tar": "^4.0.0",
     "@types/through2": "^2.0.33",
     "@types/uuid": "^3.4.3",
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
     "rimraf": "^2.6.2",
-    "source-map": "^0.7.0"
+    "source-map": "^0.7.0",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
   },
   "optionalDependencies": {
     "@angular-devkit/core": "^0.3.1",
