--- a/packages/@ionic/schematics-angular/package.json
+++ b/packages/@ionic/schematics-angular/package.json
@@ -5,8 +5,8 @@
   "homepage": "https://ionicframework.com/",
   "author": "Ionic Team <hi@ionic.io> (https://ionicframework.com) ",
   "scripts": {
-    "clean": "rimraf */index.{js,d.ts}",
-    "lint": "tslint --config ../../../tslint.js --project tsconfig.json",
+    "clean": "rimraf '*/index.{js,d.ts}'",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "prepublishOnly": "npm run build"
@@ -28,9 +28,15 @@
     "@angular-devkit/core": "^0.3.1",
     "@angular-devkit/schematics": "^0.3.1",
     "@schematics/angular": "^0.3.1",
-    "@types/lodash": "^4.14.102",
+    "@types/lodash": "^4.14.104",
+    "@types/node": "^6.0.101",
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
     "rimraf": "^2.6.2",
-    "source-map": "^0.7.0"
+    "source-map": "^0.7.0",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
   },
   "peerDependencies": {
     "@angular-devkit/schematics": "*",
