--- a/packages/ionic/package.json
+++ b/packages/ionic/package.json
@@ -13,8 +13,8 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "clean": "rimraf ./dist",
-    "lint": "tslint --config ../../tslint.js --project tsconfig.json",
+    "clean": "rimraf dist",
+    "lint": "tslint --config tslint.js --project tsconfig.json",
     "build": "npm run clean && tsc",
     "watch": "tsc -w",
     "test": "jest",
@@ -48,7 +48,7 @@
     "@ionic/cli-utils": "1.19.0",
     "chalk": "^2.3.0",
     "debug": "^3.1.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "opn": "^5.2.0",
     "semver": "^5.5.0",
     "tslib": "^1.9.0",
@@ -56,10 +56,16 @@
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
-    "@types/lodash": "^4.14.95",
+    "@types/lodash": "^4.14.104",
+    "@types/node": "^6.0.101",
     "@types/opn": "^5.1.0",
     "@types/update-notifier": "^2.0.0",
-    "rimraf": "^2.6.2"
+    "jest": "^22.4.2",
+    "jest-cli": "^22.4.2",
+    "rimraf": "^2.6.2",
+    "ts-jest": "^22.4.1",
+    "tslint": "^5.9.1",
+    "typescript": "~2.6.2"
   },
   "jest": {
     "globals": {
