--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
     "publish": "lerna publish --exact --conventional-commits",
-    "prepush": "npm run lint"
+    "precommit": "npm run lint"
   },
   "devDependencies": {
     "@types/node": "^6.0.92",
