--- a/packages/@ionic/discover/package.json
+++ b/packages/@ionic/discover/package.json
@@ -28,12 +28,16 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "debug": "^3.1.0",
     "netmask": "^1.0.6",
-    "tslib": "^1.9.0"
+    "tslib": "^1.9.0",
+    "ws": "^5.0.0"
   },
   "devDependencies": {
+    "@types/debug": "0.0.30",
     "@types/netmask": "^1.0.30",
     "@types/node": "^6.0.101",
+    "@types/ws": "^4.0.1",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
     "rimraf": "^2.6.2",
