refactor(v1-util): rename to v1-toolkit

--- a/packages/@ionic/v1-toolkit/package.json
+++ b/packages/@ionic/v1-toolkit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ionic/v1-util",
+  "name": "@ionic/v1-toolkit",
   "version": "0.0.0",
   "description": "Utility CLI for Ionic 1.x apps, used by Ionic CLI",
   "bin": {
