--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - restore_cache:
           key: dependency-cache-{{ checksum "packages/@ionic/schematics-angular/package.json" }}
       - restore_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/v1-util/package.json" }}
+          key: dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
       - restore_cache:
           key: dependency-cache-{{ checksum "packages/ionic/package.json" }}
       - run: npm install
@@ -67,9 +67,9 @@ jobs:
           paths:
             - packages/@ionic/schematics-angular/node_modules
       - save_cache:
-          key: dependency-cache-{{ checksum "packages/@ionic/v1-util/package.json" }}
+          key: dependency-cache-{{ checksum "packages/@ionic/v1-toolkit/package.json" }}
           paths:
-            - packages/@ionic/v1-util/node_modules
+            - packages/@ionic/v1-toolkit/node_modules
       - save_cache:
           key: dependency-cache-{{ checksum "packages/ionic/package.json" }}
           paths:
