--- a/packages/@ionic/cli-utils/package.json
+++ b/packages/@ionic/cli-utils/package.json
@@ -50,7 +50,6 @@
     "lodash": "^4.17.5",
     "opn": "^5.2.0",
     "os-name": "^2.0.1",
-    "package-json": "^4.0.1",
     "semver": "^5.5.0",
     "split2": "^2.2.0",
     "ssh-config": "^1.1.1",
@@ -71,7 +70,6 @@
     "@types/lodash": "^4.14.104",
     "@types/node": "^6.0.101",
     "@types/opn": "^5.1.0",
-    "@types/package-json": "^4.0.1",
     "@types/semver": "^5.4.0",
     "@types/split2": "^2.1.6",
     "@types/tar": "^4.0.0",
@@ -81,14 +79,10 @@
     "jest-cli": "^22.4.2",
     "rimraf": "^2.6.2",
     "source-map": "^0.7.0",
+    "superagent-proxy": "^1.0.3",
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
     "typescript": "~2.6.2"
-  },
-  "optionalDependencies": {
-    "@angular-devkit/core": "^0.3.1",
-    "@angular-devkit/schematics": "^0.3.1",
-    "superagent-proxy": "^1.0.2"
   },
   "jest": {
     "globals": {
