--- a/packages/@ionic/v1-toolkit/package.json
+++ b/packages/@ionic/v1-toolkit/package.json
@@ -38,6 +38,7 @@
     "chokidar": "^2.0.0",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
     "http-proxy-middleware": "^0.17.4",
     "tiny-lr": "^1.1.0",
     "tslib": "^1.9.0",
@@ -57,9 +58,6 @@
     "ts-jest": "^22.4.1",
     "tslint": "^5.9.1",
     "typescript": "~2.6.2"
-  },
-  "optionalDependencies": {
-    "gulp": "^3.9.1"
   },
   "jest": {
     "globals": {
