--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "publish:canary": "lerna publish --canary --exact --npm-tag=canary --skip-git",
     "publish:ci-4.x": "lerna publish --canary --exact --npm-tag=canary --skip-git --cd-version=major",
     "publish:testing": "lerna publish --canary=testing --exact --npm-tag=testing --skip-git",
-    "publish": "lerna publish --exact --conventional-commits",
+    "publish": "lerna publish --exact",
     "precommit": "npm run lint"
   },
   "devDependencies": {
