chore(ci): stop publishing canary releases

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,8 +70,8 @@ jobs:
             - packages/ionic/node_modules
       - run: npm run lint
       - run: npm run test
-      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      - run: npm run publish:ci-4.x -- --yes
+      # - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      # - run: npm run publish:ci-4.x -- --yes
     branches:
       only:
         - master
